--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release Workflow
+name: Rel
 
 on:
   pull_request:
@@ -22,5 +22,5 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: marjanom/devopsexercise1:latest
+          tags: marjanom/exercise1:latest
 
